--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,5 @@
     <string name="insert_text_here">INSERT TEXT HERE</string>
     <string name="update_content">Update Content</string>
     <string name="content">Content</string>
+    <string name="see_on_map">See on Map</string>
 </resources>
